# skillguard

./: .pre-commit-hooks.yaml  .skillguardignore  PUBLISH.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/malicious-skill/: SKILL.md  setup.sh
examples/safe-skill/: SKILL.md
skillguard/: __init__.py  cli.py  report.py  rules.py  scanner.py
tests/: test_rules.py
